Fix :Set the minimum width of the outermost div,  so that if on small screen then the user has to scroll horizontally to the right to view the remaining content.

--- a/React/src/App.css
+++ b/React/src/App.css
@@ -10,6 +10,6 @@
     background-color: #ededed;
     margin-top: -50px;
     height: 90vh;
-    width: 90vw;
+    /* width: 90vw; */
     box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.7);
 }
